Bug 389789  nsNavHistory::RemoveDuplicateURIs() should not delete moz_historyvisits, it should remap them to the moz_place id we are keeping (r=marco, r=sspitzer)